--- a/updates/updates.html
+++ b/updates/updates.html
@@ -25,7 +25,7 @@
   <header class="site-header" role="banner">
     <div class="site-inner">
       <a class="brand" href="../index.html" data-i18n="site_title">
-        <img class="brand-logo" src="/assets/icons/logo_en.svg" alt="TSD Myanmar logo">
+        <img class="brand-logo" src="../assets/images/logo_en.svg" alt="TSD Myanmar logo">
         <span class="brand-text">TSD Myanmar</span>
       </a>
       <button class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -145,6 +145,6 @@
   <script src="../js/theme.js"></script>
   <script src="../js/header.js"></script>
   <script src="../js/i18n.js"></script>
-  <script src="updates/js/updates-page.js"></script>
+  <script src="js/updates-page.js"></script>
 </body>
 </html>
