Restructure: update asset and script references to new layout; add css/main.css

--- a/inclusion.html
+++ b/inclusion.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Inclusion — TSD Myanmar</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.css">
   <script>
     (function(){
       try{
@@ -24,7 +24,7 @@
   <header class="site-header" role="banner">
     <div class="site-inner">
       <a class="brand" href="index.html" data-i18n="site_title">
-        <img class="brand-logo" src="/assets/images/logo_en.svg" alt="TSD Myanmar logo">
+        <img class="brand-logo" src="assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
         <span class="brand-text">TSD Myanmar</span>
       </a>
       <button class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,3 +134,12 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
