--- a/updates/updates.html
+++ b/updates/updates.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Updates & News — TSD Myanmar</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/updates.css">
     <script>
       (function(){
@@ -25,7 +25,7 @@
   <header class="site-header" role="banner">
     <div class="site-inner">
       <a class="brand" href="../index.html" data-i18n="site_title">
-        <img class="brand-logo" src="../assets/images/logo_en.svg" alt="TSD Myanmar logo">
+        <img class="brand-logo" src="assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
         <span class="brand-text">TSD Myanmar</span>
       </a>
       <button class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,9 +142,19 @@
     <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
   </footer>
 
-  <script src="../js/theme.js"></script>
-  <script src="../js/header.js"></script>
-  <script src="../js/i18n.js"></script>
-  <script src="js/updates-page.js"></script>
+  <script src="js/core/theme.js"></script>
+  <script src="js/core/header.js"></script>
+  <script src="js/core/i18n.js"></script>
+  <script src="js/pages/updates.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
