--- a/impact.html
+++ b/impact.html
@@ -57,7 +57,7 @@
           <li class="has-dropdown">
             <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">News <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="News submenu">
-              <li><a href="updates/updates.html">Updates &amp; Reports</a></li>
+              <li><a href="updates.html">Updates &amp; Reports</a></li>
             </ul>
           </li>
 
@@ -109,7 +109,7 @@
         <ul class="footer-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="updates/updates.html">Updates</a></li>
+          <li><a href="updates.html">Updates</a></li>
         </ul>
       </div>
       <div class="col contact">
@@ -124,12 +124,18 @@
     <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
   </footer>
 
-  <script src="js/theme.js"></script>
-  <script src="js/header.js"></script>
-  <script src="js/i18n.js"></script>
+  <script src="js/core/theme.js"></script>
+  <script src="js/core/header.js"></script>
+  <script src="js/core/i18n.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
