--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li class="has-dropdown">
             <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">News <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="News submenu">
-              <li><a href="updates/updates.html">Updates &amp; Reports</a></li>
+              <li><a href="updates.html">Updates &amp; Reports</a></li>
             </ul>
           </li>
 
@@ -165,7 +165,7 @@
       <div id="updates-preview-list">
         <p>Loading updates…</p>
       </div>
-      <p><a href="updates/updates.html">See all updates</a></p>
+      <p><a href="updates.html">See all updates</a></p>
     </section>
 
     <section class="trust" aria-label="Trust and transparency">
@@ -194,7 +194,7 @@
         <ul class="footer-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="updates/updates.html">Updates</a></li>
+          <li><a href="updates.html">Updates</a></li>
           <li><a href="donate.html">Donate</a></li>
         </ul>
       </div>
@@ -209,12 +209,18 @@
     </div>
     <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
   </footer>
-  <script src="js/theme.js"></script>
-  <script src="js/header.js"></script>
-  <script src="js/i18n.js"></script>
+  <script src="js/core/theme.js"></script>
+  <script src="js/core/header.js"></script>
+  <script src="js/core/i18n.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
