--- a/updates-archive.html
+++ b/updates-archive.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Updates & News — TSD Myanmar</title>
+  <title>Updates — TSD Myanmar</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/updates.css">
-    <script>
-      (function(){
-        try{
-          const k = 'tsd_theme';
-          const stored = localStorage.getItem(k) || 'system';
-          if (stored === 'system'){
-            const dark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-            document.documentElement.setAttribute('data-theme', dark? 'dark':'light');
-          } else {
-            document.documentElement.setAttribute('data-theme', stored);
-          }
-        }catch(e){}
-      })();
-    </script>
+  <script>
+    (function(){
+      try{
+        const k = 'tsd_theme';
+        const stored = localStorage.getItem(k) || 'system';
+        if (stored === 'system'){
+          const dark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+          document.documentElement.setAttribute('data-theme', dark? 'dark':'light');
+        } else {
+          document.documentElement.setAttribute('data-theme', stored);
+        }
+      }catch(e){}
+    })();
+  </script>
 </head>
 <body>
   <header class="site-header" role="banner">
@@ -83,44 +83,30 @@
             <option value="my">Burmese</option>
           </select>
         </div>
-          <div class="theme-wrap">
-            <label for="site-theme-select" class="visually-hidden">Theme</label>
-            <select id="site-theme-select" class="theme-select" aria-label="Theme (System, Light, Dark)">
-              <option value="system">System</option>
-              <option value="light">Light</option>
-              <option value="dark">Dark</option>
-            </select>
-          </div>
+        <div class="theme-wrap">
+          <label for="site-theme-select" class="visually-hidden">Theme</label>
+          <select id="site-theme-select" class="theme-select" aria-label="Theme (System, Light, Dark)">
+            <option value="system">System</option>
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+          </select>
+        </div>
         <a class="btn btn-primary" href="../donate.html">Donate</a>
       </div>
     </div>
   </header>
   <main>
-    <section class="updates-hero">
-      <h1>Updates & News</h1>
-      <p class="lead">Recent activity, program progress, and transparency notes from Together for Sustainable Development. We publish concise, factual updates that explain what we did, why, and what comes next.</p>
-    </section>
-
-    <section class="updates-controls" aria-hidden="false">
-      <div class="filter" aria-label="Filter updates by year">
-        <label for="updates-year-filter" class="visually-hidden">Filter by year</label>
-        <select id="updates-year-filter" aria-controls="updates-list">
-          <option value="">All years</option>
-        </select>
-      </div>
-      <div class="status" aria-live="polite" aria-atomic="true"><span id="updates-loading">Loading updates…</span></div>
-    </section>
-
-    <section id="updates-list" class="updates-list" role="list" aria-label="Updates and news">
-      <p class="visually-hidden" data-i18n="loading">Loading updates…</p>
+    <section>
+      <h2 data-i18n="latest_news_h2">Latest News</h2>
+      <p data-i18n="visit_full_feed">Visit the updates page for the full feed.</p>
+      <p><a href="updates.html" data-i18n="open_updates">Open Updates & News</a></p>
     </section>
   </main>
-
   <footer class="site-footer" role="contentinfo">
     <div class="footer-grid site-inner">
       <div class="col about">
         <h3>About TSD</h3>
-        <p>Together for Sustainable Development supports community-designed projects to improve health, education, and livelihoods.</p>
+        <p>We support community-led initiatives that improve wellbeing and livelihoods across Chin State.</p>
       </div>
       <div class="col links">
         <h4>Quick Links</h4>
@@ -136,7 +122,7 @@
       </div>
       <div class="col legal">
         <h4>Community</h4>
-        <p>Connect with grassroots leaders and partners driving change in Chin State.</p>
+        <p>Local leadership and long-term partnerships are central to our work.</p>
       </div>
     </div>
     <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
@@ -145,9 +131,15 @@
   <script src="js/core/theme.js"></script>
   <script src="js/core/header.js"></script>
   <script src="js/core/i18n.js"></script>
-  <script src="js/pages/updates.js"></script>
+  <script src="js/updates.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
