--- a/education.html
+++ b/education.html
@@ -77,9 +77,8 @@
         <div class="lang-wrap">
           <label for="site-lang-select" class="visually-hidden">Language</label>
           <select id="site-lang-select" class="lang-select" aria-label="Language">
-            <option value="mara">Mara</option>
             <option value="en">English</option>
-            <option value="my">Burmese</option>
+            <option value="mrh">Mara</option>
           </select>
         </div>
         <div class="theme-wrap">
