--- a/partners.html
+++ b/partners.html
@@ -33,11 +33,11 @@
       <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
         <ul>
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">About Us <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_about_us">About Us <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="About Us submenu">
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="who-we-are.html">Who We Are</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="about.html" data-i18n="nav_about_us">About Us</a></li>
+              <li><a href="who-we-are.html" data-i18n="nav_who_we_are">Who We Are</a></li>
+              <li><a href="contact.html" data-i18n="nav_contact_us">Contact Us</a></li>
             </ul>
           </li>
 
@@ -77,9 +77,8 @@
         <div class="lang-wrap">
           <label for="site-lang-select" class="visually-hidden">Language</label>
           <select id="site-lang-select" class="lang-select" aria-label="Language">
-            <option value="mara">Mara</option>
             <option value="en">English</option>
-            <option value="my">Burmese</option>
+            <option value="mrh">Mara</option>
           </select>
         </div>
         <div class="theme-wrap">
