--- a/updates/updates.html
+++ b/updates/updates.html
@@ -66,7 +66,7 @@
             <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">Get Involved <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="Get Involved submenu">
               <li><a href="../get-involved.html">How to Get Involved</a></li>
-              <li><a href="../partners.html">Partnership</a></li>
+              <li><a href="../partnership.html">Partnership</a></li>
               <li><a href="../education-ambassadors.html">Education Ambassadors</a></li>
               <li><a href="../join-our-team.html">Join our Team</a></li>
               <li><a href="../donate.html">Donate</a></li>
@@ -147,7 +147,6 @@
   <script src="js/pages/updates.js"></script>
 </body>
 </html>
-
 
 
 
