--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           <select id="site-lang-select" class="lang-select" aria-label="Language">
             <option value="en">English</option>
             <option value="mrh">Mara</option>
+            <option value="my">Burmese</option>
           </select>
         </div>
         <div class="theme-wrap">
