--- a/updates.html
+++ b/updates.html
@@ -97,8 +97,8 @@
   </header>
   <main>
     <section class="updates-hero">
-      <h1>Updates & News</h1>
-      <p class="lead">Recent activity, program progress, and transparency notes from Together for Sustainable Development. We publish concise, factual updates that explain what we did, why, and what comes next.</p>
+      <h1 data-i18n="updates_title">Updates & News</h1>
+      <p class="lead" data-i18n="updates_subtitle">Recent activity, program progress, and transparency notes from Together for Sustainable Development. We publish concise, factual updates that explain what we did, why, and what comes next.</p>
     </section>
 
     <section class="updates-controls" aria-hidden="false">
@@ -108,12 +108,21 @@
           <option value="">All years</option>
         </select>
       </div>
+      <div class="search" aria-label="Search updates">
+        <label for="updates-search" class="visually-hidden" data-i18n="search_placeholder">Search updates</label>
+        <input id="updates-search" type="search" placeholder="" aria-controls="updates-list" data-i18n-placeholder="search_placeholder">
+      </div>
       <div class="status" aria-live="polite" aria-atomic="true"><span id="updates-loading">Loading updates…</span></div>
     </section>
 
     <section id="updates-list" class="updates-list" role="list" aria-label="Updates and news">
       <p class="visually-hidden" data-i18n="loading">Loading updates…</p>
     </section>
+
+    <div class="updates-actions" style="text-align:center; margin-bottom:2rem;">
+      <button id="updates-load-more" class="btn" data-i18n="load_more" aria-label="Load more updates">Load more</button>
+      <p style="margin-top:.5rem;"><a href="updates-archive.html">See archive</a></p>
+    </div>
   </main>
 
   <footer class="site-footer" role="contentinfo">
