chore: use absolute /update.html links and rewrites; remove legacy updates/update.html

--- a/updates.html
+++ b/updates.html
@@ -110,7 +110,7 @@
       </div>
       <div class="search" aria-label="Search updates">
         <label for="updates-search" class="visually-hidden" data-i18n="search_placeholder">Search updates</label>
-        <input id="updates-search" type="search" placeholder="" aria-controls="updates-list" data-i18n-placeholder="search_placeholder">
+        <input id="updates-search" type="search" placeholder="" aria-controls="updates-list" data-i18n-placeholder="search_placeholder" data-i18n-aria="search_placeholder">
       </div>
       <div class="status" aria-live="polite" aria-atomic="true"><span id="updates-loading">Loading updates…</span></div>
     </section>
