--- a/update.html
+++ b/update.html
@@ -6,6 +6,7 @@
   <title data-i18n="updates_title">News & Updates — TSD Myanmar</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/updates.css">
+  <link rel="stylesheet" href="/css/update.css">
 </head>
 <body>
   <header class="site-header" role="banner"> <!-- minimal header to reuse site header via include -->
@@ -14,14 +15,31 @@
     </div>
   </header>
 
-  <main class="site-inner" id="update-detail-root">
-    <nav aria-label="Breadcrumb"><a href="/updates.html">Updates</a> › <span id="crumb-title">...</span></nav>
+  <main class="site-inner update-page" id="update-detail-root">
+    <nav class="breadcrumb" aria-label="Breadcrumb"><a href="/updates.html">Updates</a> › <span id="crumb-title">...</span></nav>
+
     <article id="update-article" class="update-article" role="article">
-      <header>
-        <h1 id="update-title">Loading…</h1>
-        <div class="update-meta"><time id="update-date"></time> <span id="update-badge"></span></div>
+      <header class="update-header">
+        <h1 id="update-title" class="update-title">Loading…</h1>
+        <div class="update-meta"><time id="update-date"></time> <span id="update-badge" class="small-muted"></span></div>
+        <hr class="update-divider" aria-hidden="true" />
       </header>
-      <section id="update-body" class="update-body">Loading…</section>
+
+      <div class="update-content-wrapper">
+        <div id="update-body" class="update-body" role="article" aria-live="polite">
+          <!-- skeletons inserted by JS while loading -->
+          <div class="skeleton skel-title"></div>
+          <div class="skeleton skel-meta"></div>
+          <div class="skeleton skel-para"></div>
+          <div class="skeleton skel-para"></div>
+          <div class="skeleton skel-para" style="width:80%"></div>
+        </div>
+
+        <aside class="update-aside" id="update-aside" aria-label="Related actions">
+          <div class="download-ctas" id="update-ctas"></div>
+        </aside>
+      </div>
+
     </article>
   </main>
 
