--- a/update.html
+++ b/update.html
@@ -9,9 +9,70 @@
   <link rel="stylesheet" href="/css/update.css">
 </head>
 <body>
-  <header class="site-header" role="banner"> <!-- minimal header to reuse site header via include -->
+  <header class="site-header" role="banner">
     <div class="site-inner">
-      <a class="brand" href="/index.html" data-i18n="site_title">TSD Myanmar</a>
+      <a class="brand" href="/index.html" data-i18n="site_title">
+        <img class="brand-logo" src="/assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
+        <span class="brand-text">TSD Myanmar</span>
+      </a>
+      <button class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="hamburger" aria-hidden="true"></span>
+      </button>
+      <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
+        <ul>
+          <li class="has-dropdown">
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">About Us <span aria-hidden="true">+</span></button>
+            <ul class="dropdown" aria-label="About Us submenu">
+              <li><a href="/about.html">About Us</a></li>
+              <li><a href="/who-we-are.html">Who We Are</a></li>
+              <li><a href="/contact.html">Contact Us</a></li>
+            </ul>
+          </li>
+
+          <li class="has-dropdown">
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">Our Work <span aria-hidden="true">+</span></button>
+            <ul class="dropdown" aria-label="Our Work submenu">
+              <li><a href="/where-we-work.html">Where We Work</a></li>
+              <li><a href="/what-we-do.html">What We Do</a></li>
+              <li><a href="/our-approach.html">Our Approach</a></li>
+            </ul>
+          </li>
+
+          <li class="has-dropdown">
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">News <span aria-hidden="true">+</span></button>
+            <ul class="dropdown" aria-label="News submenu">
+              <li><a href="/updates.html">Updates &amp; Reports</a></li>
+            </ul>
+          </li>
+
+          <li class="has-dropdown">
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">Get Involved <span aria-hidden="true">+</span></button>
+            <ul class="dropdown" aria-label="Get Involved submenu">
+              <li><a href="/get-involved.html">How to Get Involved</a></li>
+              <li><a href="/partnership.html">Partnership</a></li>
+              <li><a href="/donate.html">Donate</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-actions">
+        <div class="lang-wrap">
+          <label for="site-lang-select" class="visually-hidden">Language</label>
+          <select id="site-lang-select" class="lang-select" aria-label="Language">
+            <option value="en">English</option>
+            <option value="mrh">Mara</option>
+          </select>
+        </div>
+        <div class="theme-wrap">
+          <label for="site-theme-select" class="visually-hidden">Theme</label>
+          <select id="site-theme-select" class="theme-select" aria-label="Theme (System, Light, Dark)">
+            <option value="system">System</option>
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+          </select>
+        </div>
+        <a class="btn btn-primary" href="/donate.html">Donate</a>
+      </div>
     </div>
   </header>
 
@@ -43,8 +104,34 @@
     </article>
   </main>
 
-  <footer class="site-footer">© 2026 Together for Sustainable Development</footer>
+  <footer class="site-footer" role="contentinfo">
+    <div class="footer-grid site-inner">
+      <div class="col about">
+        <h3>About TSD</h3>
+        <p>Together for Sustainable Development supports community-designed projects to improve health, education, and livelihoods.</p>
+      </div>
+      <div class="col links">
+        <h4>Quick Links</h4>
+        <ul class="footer-links">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/projects.html">Projects</a></li>
+          <li><a href="/donate.html">Donate</a></li>
+        </ul>
+      </div>
+      <div class="col contact">
+        <h4>Contact</h4>
+        <address>info@tsdmyanmar.org</address>
+      </div>
+      <div class="col legal">
+        <h4>Community</h4>
+        <p>Connect with grassroots leaders and partners driving change in Chin State.</p>
+      </div>
+    </div>
+    <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
+  </footer>
 
+  <script src="/js/core/theme.js"></script>
+  <script src="/js/core/header.js"></script>
   <script src="/js/core/i18n.js"></script>
   <script src="/js/pages/update-detail.js"></script>
 </body>
