--- a/update.html
+++ b/update.html
@@ -11,7 +11,7 @@
 <body>
   <header class="site-header" role="banner">
     <div class="site-inner">
-      <a class="brand" href="/index.html" data-i18n="site_title">
+      <a class="brand" href="/" data-i18n="site_title">
         <img class="brand-logo" src="/assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
         <span class="brand-text">TSD Myanmar</span>
       </a>
@@ -117,23 +117,24 @@
     <div class="footer-grid site-inner">
       <div class="col about">
         <h3>About TSD</h3>
-        <p>Together for Sustainable Development supports community-designed projects to improve health, education, and livelihoods.</p>
+        <p>Together for Sustainable Development partners with remote communities in Chin State to co-design resilient livelihoods, education, and health services.</p>
       </div>
       <div class="col links">
         <h4>Quick Links</h4>
         <ul class="footer-links">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/projects.html">Projects</a></li>
-          <li><a href="/donate.html">Donate</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="updates.html">Updates</a></li>
+          <li><a href="donate.html">Donate</a></li>
         </ul>
       </div>
       <div class="col contact">
         <h4>Contact</h4>
-        <address>info@tsdmyanmar.org</address>
+        <address>Phone: +95 9 1234 5678<br>Email: info@tsdmyanmar.org<br>Hakha, Chin State, Myanmar</address>
       </div>
       <div class="col legal">
         <h4>Community</h4>
-        <p>Connect with grassroots leaders and partners driving change in Chin State.</p>
+        <p>Local leadership and long-term partnerships guide our work; we publish reports for transparency.</p>
       </div>
     </div>
     <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
