--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
           </li>
 
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">Our Work <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_our_work">Our Work <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="Our Work submenu">
               <li><a href="where-we-work.html">Where We Work</a></li>
               <li><a href="what-we-do.html">What We Do</a></li>
@@ -55,14 +55,14 @@
           </li>
 
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">News <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_news">News <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="News submenu">
               <li><a href="updates.html">Updates &amp; Reports</a></li>
             </ul>
           </li>
 
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">Get Involved <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_get_involved">Get Involved <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="Get Involved submenu">
               <li><a href="get-involved.html">How to Get Involved</a></li>
               <li><a href="partners.html">Partnership</a></li>
