--- a/education-ambassadors.html
+++ b/education-ambassadors.html
@@ -23,8 +23,8 @@
 <body>
   <header class="site-header" role="banner">
     <div class="site-inner">
-      <a class="brand" href="index.html" data-i18n="site_title">
-        <img class="brand-logo" src="assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
+      <a class="brand" href="/" data-i18n="site_title">
+        <img class="brand-logo" src="/assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
         <span class="brand-text">TSD Myanmar</span>
       </a>
       <button class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
       <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
         <ul>
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">About Us <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_about_us">About Us <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="About Us submenu">
               <li><a href="about.html">About Us</a></li>
               <li><a href="who-we-are.html">Who We Are</a></li>
@@ -42,7 +42,7 @@
           </li>
 
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">Our Work <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_our_work">Our Work <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="Our Work submenu">
               <li><a href="where-we-work.html">Where We Work</a></li>
               <li><a href="what-we-do.html">What We Do</a></li>
@@ -55,14 +55,14 @@
           </li>
 
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">News <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_news">News <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="News submenu">
               <li><a href="updates.html">Updates &amp; Reports</a></li>
             </ul>
           </li>
 
           <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false">Get Involved <span aria-hidden="true">+</span></button>
+            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_get_involved">Get Involved <span aria-hidden="true">+</span></button>
             <ul class="dropdown" aria-label="Get Involved submenu">
               <li><a href="get-involved.html">How to Get Involved</a></li>
               <li><a href="partners.html">Partnership</a></li>
@@ -105,23 +105,24 @@
     <div class="footer-grid site-inner">
       <div class="col about">
         <h3>About TSD</h3>
-        <p>Local partnerships and community-led programs.</p>
+        <p>Together for Sustainable Development partners with remote communities in Chin State to co-design resilient livelihoods, education, and health services.</p>
       </div>
       <div class="col links">
         <h4>Quick Links</h4>
         <ul class="footer-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="donate.html">Donate</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/projects.html">Projects</a></li>
+          <li><a href="/updates.html">Updates</a></li>
+          <li><a href="/donate.html">Donate</a></li>
         </ul>
       </div>
       <div class="col contact">
         <h4>Contact</h4>
-        <address>partners@tsdmyanmar.org</address>
+        <address>Phone: +95 9 1234 5678<br>Email: info@tsdmyanmar.org<br>Hakha, Chin State, Myanmar</address>
       </div>
       <div class="col legal">
         <h4>Community</h4>
-        <p>We publish annual reports and financial summaries for transparency.</p>
+        <p>Local leadership and long-term partnerships guide our work; we publish reports for transparency.</p>
       </div>
     </div>
     <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
