--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
   <header class="site-header" role="banner">
     <div class="site-inner">
-      <a class="brand" href="index.html" data-i18n="site_title">
-        <img class="brand-logo" src="assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
+      <a class="brand" href="/" data-i18n="site_title">
+        <img class="brand-logo" src="/assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
         <span class="brand-text">TSD Myanmar</span>
       </a>
       <button class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
