--- a/updates.html
+++ b/updates.html
@@ -22,96 +22,42 @@
     </script>
 </head>
 <body>
-  <header class="site-header" role="banner">
+  <header class="site-header minimal" role="banner">
     <div class="site-inner">
-      <a class="brand" href="/" data-i18n="site_title">
-        <img class="brand-logo" src="/assets/images/logo/logo-light.svg" alt="TSD Myanmar logo">
-        <span class="brand-text">TSD Myanmar</span>
-      </a>
-      <button class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="hamburger" aria-hidden="true"></span>
-      </button>
-
-      <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
-        <ul>
-          <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_about_us">About Us <span aria-hidden="true">+</span></button>
-            <ul class="dropdown" aria-label="About Us submenu">
-              <li><a href="/about.html" data-i18n="nav_about_us">About Us</a></li>
-              <li><a href="/who-we-are.html" data-i18n="nav_who_we_are">Who We Are</a></li>
-              <li><a href="../contact.html">Contact Us</a></li>
-            </ul>
-          </li>
-
-          <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_our_work">Our Work <span aria-hidden="true">+</span></button>
-            <ul class="dropdown" aria-label="Our Work submenu">
-              <li><a href="../where-we-work.html">Where We Work</a></li>
-              <li><a href="../what-we-do.html">What We Do</a></li>
-              <li><a href="../our-approach.html">Our Approach</a></li>
-              <li><a href="../education.html">Education</a></li>
-              <li><a href="../food-security.html">Food Security</a></li>
-              <li><a href="../inclusion.html">Inclusion</a></li>
-              <li><a href="../relief-drr.html">Relief &amp; DRR</a></li>
-            </ul>
-          </li>
-
-          <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_news">News <span aria-hidden="true">+</span></button>
-            <ul class="dropdown" aria-label="News submenu">
-              <li><a href="updates.html">Updates &amp; Reports</a></li>
-            </ul>
-          </li>
-
-          <li class="has-dropdown">
-            <button class="drop-toggle" aria-haspopup="true" aria-expanded="false" data-i18n="header_get_involved">Get Involved <span aria-hidden="true">+</span></button>
-            <ul class="dropdown" aria-label="Get Involved submenu">
-              <li><a href="../get-involved.html">How to Get Involved</a></li>
-              <li><a href="../partners.html">Partnership</a></li>
-              <li><a href="../education-ambassadors.html">Education Ambassadors</a></li>
-              <li><a href="../join-our-team.html">Join our Team</a></li>
-              <li><a href="../donate.html">Donate</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-      <div class="header-actions">
-        <div class="lang-wrap">
-          <label for="site-lang-select" class="visually-hidden">Language</label>
-          <select id="site-lang-select" class="lang-select" aria-label="Language">
-            <option value="en">English</option>
-            <option value="mrh">Mara</option>
-            <option value="my">Burmese</option>
-          </select>
-        </div>
-          <div class="theme-wrap">
-            <label for="site-theme-select" class="visually-hidden">Theme</label>
-            <select id="site-theme-select" class="theme-select" aria-label="Theme (System, Light, Dark)">
-              <option value="system">System</option>
-              <option value="light">Light</option>
-              <option value="dark">Dark</option>
-            </select>
-          </div>
-        <a class="btn btn-primary" href="../donate.html">Donate</a>
-      </div>
+      <a class="brand minimal-brand" href="/">Home</a>
+      <nav class="breadcrumb header-breadcrumb" aria-label="Breadcrumb">Updates</nav>
     </div>
   </header>
   <main>
     <section class="updates-hero">
       <h1 data-i18n="updates_title">Updates & News</h1>
       <p class="lead" data-i18n="updates_subtitle">Recent activity, program progress, and transparency notes from Together for Sustainable Development. We publish concise, factual updates that explain what we did, why, and what comes next.</p>
+      <div class="hero-controls">
+        <div class="search" aria-label="Search updates">
+          <label for="updates-search" class="visually-hidden" data-i18n="search_placeholder">Search updates</label>
+          <input id="updates-search" type="search" placeholder="" aria-controls="updates-list" data-i18n-placeholder="search_placeholder" data-i18n-aria="search_placeholder">
+        </div>
+      </div>
     </section>
 
-    <section class="updates-controls" aria-hidden="false">
-      <div class="filter" aria-label="Filter updates by year">
+    <section class="updates-controls filter-bar" aria-hidden="false">
+      <div class="filter-group">
         <label for="updates-year-filter" class="visually-hidden">Filter by year</label>
         <select id="updates-year-filter" aria-controls="updates-list">
           <option value="">All years</option>
         </select>
-      </div>
-      <div class="search" aria-label="Search updates">
-        <label for="updates-search" class="visually-hidden" data-i18n="search_placeholder">Search updates</label>
-        <input id="updates-search" type="search" placeholder="" aria-controls="updates-list" data-i18n-placeholder="search_placeholder" data-i18n-aria="search_placeholder">
+        <label for="updates-category-filter" class="visually-hidden">Filter by category</label>
+        <select id="updates-category-filter" aria-controls="updates-list">
+          <option value="">All categories</option>
+          <option value="news">News</option>
+          <option value="report">Report</option>
+          <option value="announcement">Announcement</option>
+        </select>
+        <label for="updates-sort" class="visually-hidden">Sort</label>
+        <select id="updates-sort" aria-controls="updates-list">
+          <option value="newest">Newest</option>
+          <option value="oldest">Oldest</option>
+        </select>
       </div>
       <div class="status" aria-live="polite" aria-atomic="true"><span id="updates-loading">Loading updates…</span></div>
     </section>
@@ -126,53 +72,16 @@
     </div>
   </main>
 
-  <footer class="site-footer" role="contentinfo">
-    <div class="footer-grid site-inner">
-      <div class="col about">
-        <h3>About TSD</h3>
-        <p>Together for Sustainable Development partners with remote communities in Chin State to co-design resilient livelihoods, education, and health services.</p>
-      </div>
-      <div class="col links">
-        <h4>Quick Links</h4>
-        <ul class="footer-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="updates.html">Updates</a></li>
-          <li><a href="donate.html">Donate</a></li>
-        </ul>
-      </div>
-      <div class="col contact">
-        <h4>Contact</h4>
-        <address>Phone: +95 9 1234 5678<br>Email: info@tsdmyanmar.org<br>Hakha, Chin State, Myanmar</address>
-      </div>
-      <div class="col legal">
-        <h4>Community</h4>
-        <p>Local leadership and long-term partnerships guide our work; we publish reports for transparency.</p>
-      </div>
+  <footer class="site-footer minimal" role="contentinfo">
+    <div class="site-inner">
+      <div class="footer-bar">© 2026 Together for Sustainable Development — <a href="/privacy.html">Privacy policy</a></div>
     </div>
-    <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
   </footer>
 
   <script src="js/core/theme.js"></script>
   <script src="js/core/header.js"></script>
   <script src="js/core/i18n.js"></script>
+  <script src="js/core/news.js"></script>
   <script src="js/pages/updates.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
